data/derived/comb/progs/unify/prog0987.ml.out
Characters 29-61:
  wwhile ((failwith "asd", failwith "asd"),b);;
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
